--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ line-height: 38px;
 text-transform: uppercase;
 color: #FBB731;
 }
-p {
+.text p {
     margin-bottom: 42px;
     font-family: 'Lato', sans-serif;
     font-style: normal;
@@ -52,7 +52,8 @@ line-height: 1.4;
 color: #DEDEDE;
 }
 
-a {
+.main a,
+.promo a {
     display: inline-block;
     font-weight: bold;
 font-size: 14px;
@@ -78,9 +79,146 @@ padding: 20px 45px;
     height: 100%;
     background: linear-gradient(2.42deg, #F37335 -19.6%, #FBB731 100.79%, #FDC830 100.79%);
 }
-img {
+.main img {
     position: absolute;
     width: 829px;
     right: -168px;
     
+}
+
+.promo {
+    padding: 186px 0;
+    
+}
+.container {
+}
+
+.promo-left {
+    background-image: url(../images/01.jpg);
+    padding: 116px 50px;
+
+}
+.promo-left,
+.promo-right  {
+    flex: 0 0 49%;
+    box-sizing: border-box;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-x: center;
+}
+.sale {
+    display: inline-block;
+    font-family: Nunito Sans;
+font-style: normal;
+font-weight: 900;
+font-size: 14px;
+line-height: 18px;
+text-transform: uppercase;
+color: #FFFFFF;
+background: #F37335;
+border-radius: 14px;
+padding: 5px 19px;
+margin-bottom: 8px;
+}
+.cost {
+    font-family: Nunito Sans;
+font-style: normal;
+font-weight: 900;
+font-size: 60px;
+line-height: 76px;
+text-transform: uppercase;
+color: #FFFFFF;
+}
+.description {
+    font-family: "Lato", sans-serif;
+font-style: normal;
+font-weight: normal;
+font-size: 15px;
+line-height: 24px;
+color: #FAF9F9;
+}
+.promo-right {
+    background-image: url(../images/02.jpg);
+    padding: 102px 50px;
+
+}
+.promo-left .description {
+    max-width: 392px;
+}
+
+.promo-right .description {
+    max-width: 300px;
+}
+
+.free {
+    margin-bottom: 10px;
+font-style: normal;
+font-weight: bold;
+font-size: 44px;
+line-height: 56px;
+color: #FFFFFF;
+}
+.order {
+    margin-top: 20px;
+}
+
+.footer {
+    padding: 111px 0 106px 0;
+    background: #1E2F40;
+    color: #FFFFFF;
+}
+
+.logo {
+    width: 63px;
+    height: 56px;
+}
+
+.item {
+    font-family: "Lato", sans-serif;
+font-style: normal;
+font-weight: normal;
+font-size: 15px;
+line-height: 24px;
+    flex: 0 0 auto;
+}
+
+.item h2 {
+    margin-bottom: 12px;
+font-style: normal;
+font-weight: 800;
+font-size: 20px;
+line-height: 38px;
+text-transform: uppercase;
+}
+.item ul, 
+.tel ul {
+    list-style-type: none;
+}
+
+.item li {
+    margin-bottom: 9px;
+    color: #DEDEDE;
+    
+}
+
+.item span {
+    font-weight:800;
+
+    display: block;
+    color: #FAF9F9;
+}
+
+.item a {
+    
+color: #DEDEDE;
+text-decoration: none;
+}
+
+.tel {
+    font-style: normal;
+font-weight: 800;
+font-size: 20px;
+line-height: 38px;
+text-transform: uppercase;
+color: #FBB731;
 }
